QPID-5793: prevent deadlock between timer and consume

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1599765 13f79535-47bb-0310-9956-ffa450edef68